Rewrite the task system + Fix class remapping